********** SPL 2.0 Alpha 7 **********
===== Build 0101 2019/10/29 =====

* Library updates:
    * sgl
* Renamed independent function names in lowerCamelCase
* Moved some native independent functions into module 'os'
* Native invokes updates:
    * os.list_files
    * os.f_open
    * os.exec
    * os.exit
    * natives.input
* Rewritten function "main"
* New library functions:
    * input

********** SPL 2.0 Alpha 6 **********
===== Build 0100 2019/10/21 =====

* Implemented "String" in spl:
    * The python part is renamed to "CharArray"
* Bug fixes:
    * Fixed that the right side of "instanceof" not referencable in class itself
    * Fixed a long existing bug: loops will continue execute lines after "break" or "continue"
* New built-in function:
    * round
    * non_null_else
* More spl exceptions
* Even slower

********** SPL 2.0 Alpha 5 **********
===== Build 0099 2019/10/19 =====

* New library:
    * stats.sp:
        * Statistical classes and functions
* New method of native types:
    * String.split
    * String.is_number
* New method of built-in types:
    * List.sublist
* Environment optimization:
    * Completely removed the heap-variable in global scope
* Optimization:
    * Removed the redundant NativeFunction's

********** SPL 2.0 Alpha 4 **********
===== Build 0098 2019/10/16 =====

* Environment optimization:
    * Removed the heap-variable in global scope
* Rewritten library in SPL 2:
    * util.sp
    * sgl.sp
    * io.sp
    * threading.sp
    * json.sp

********** SPL 2.0 Alpha 3 **********
===== Build 0097 2019/10/14 =====

* New syntax:
    * Catch statement now is no longer surrounded by parenthesis
* Rewritten library in SPL 2:
    * math.sp
    * unittest.sp
    * queue.sp
    * stack.sp
    * algorithm.sp
* Removed duplicate operators:
    * Removed "and", "or", "is", "not"

********** SPL 2.0 Alpha 2 **********
===== Build 0096 2019/10/14 =====

* New syntax:
    * Anonymous class denoted by symbol "<-"
* Bug fixes: