@@ -1,0 +1,7 @@
+fn doSomething() {
+    println("Imp 1");
+}
+
+if (main()) {
+    println("Imp 1 is main!");
+}
